# FundamentalAlrotihms

./: .gitignore  CMakeLists.txt  ReadMe.md
Projects/AlgoTests/: CMakeLists.txt
Projects/AlgoTests/src/: TestsMain.cpp
Projects/FundamentalAlgorithms/: CMakeLists.txt
Projects/FundamentalAlgorithms/include/: FundamentalAlgorithms.h  QuickFind.h
Projects/FundamentalAlgorithms/src/: Algorithms.cpp  ExportDefinitions.h  QuickFind.cpp
Projects/FundamentalAlgorithmsTests/src/: TestsMain.cpp
Projects/QtGui/: CMakeLists.txt
Projects/QtGui/src/: main.cpp
Projects/QtGui/src/ui/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
